add assert in test_getGroupRefsForUser()